supercritParser.py
# Generated from supercrit.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class supercritParser ( Parser ):

    grammarFileName = "supercrit.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'print'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'\n'", "'\t'", "':'", "'('", 
                     "')'", "'['", "']'", "'if'", "'elif'", "'else'", "<INVALID>", 
                     "'while'", "'for'", "'break'", "'continue'", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'**'", "'='", "'+='", 
                     "'-='", "'*='", "'/='", "'**='", "'%='", "'<'", "'<='", 
                     "'>'", "'>='", "'=='", "'!='", "'and'", "'or'", "'not'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "INT", "FLOAT", "NUMBER", 
                      "STRING", "WHITESPACE", "NEWLINE", "TAB", "COLON", 
                      "OPEN_PAR", "CLOSE_PAR", "OPEN_BRAC", "CLOSE_BRAC", 
                      "IF", "ELIF", "ELSE", "VAR", "WHILE", "FOR", "BREAK", 
                      "CONTINUE", "PLUS", "MINUS", "TIMES", "DIV", "MOD", 
                      "POW", "ASSIGN", "INCREMENT", "DECREMENT", "MULT_EQ", 
                      "DIV_EQ", "POW_EQ", "MOD_EQ", "LESS", "LESS_EQ", "GREATER", 
                      "GREATER_EQ", "EQUAL", "NOT_EQUAL", "AND", "OR", "NOT", 
                      "COMMENT" ]

    RULE_start = 0
    RULE_block = 1
    RULE_line = 2
    RULE_tab_block = 3
    RULE_if_block = 4
    RULE_while_block = 5
    RULE_for_block = 6
    RULE_print = 7
    RULE_statement = 8
    RULE_expr = 9
    RULE_conditional = 10
    RULE_assignment = 11

    ruleNames =  [ "start", "block", "line", "tab_block", "if_block", "while_block", 
                   "for_block", "print", "statement", "expr", "conditional", 
                   "assignment" ]

    EOF = Token.EOF
    T__0=1
    INT=2
    FLOAT=3
    NUMBER=4
    STRING=5
    WHITESPACE=6
    NEWLINE=7
    TAB=8
    COLON=9
    OPEN_PAR=10
    CLOSE_PAR=11
    OPEN_BRAC=12
    CLOSE_BRAC=13
    IF=14
    ELIF=15
    ELSE=16
    VAR=17
    WHILE=18
    FOR=19
    BREAK=20
    CONTINUE=21
    PLUS=22
    MINUS=23
    TIMES=24
    DIV=25
    MOD=26
    POW=27
    ASSIGN=28
    INCREMENT=29
    DECREMENT=30
    MULT_EQ=31
    DIV_EQ=32
    POW_EQ=33
    MOD_EQ=34
    LESS=35
    LESS_EQ=36
    GREATER=37
    GREATER_EQ=38
    EQUAL=39
    NOT_EQUAL=40
    AND=41
    OR=42
    NOT=43
    COMMENT=44

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(supercritParser.BlockContext,0)


        def EOF(self):
            return self.getToken(supercritParser.EOF, 0)

        def getRuleIndex(self):
            return supercritParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)




    def start(self):

        localctx = supercritParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self.block()
            self.state = 25
            self.match(supercritParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(supercritParser.LineContext)
            else:
                return self.getTypedRuleContext(supercritParser.LineContext,i)


        def if_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(supercritParser.If_blockContext)
            else:
                return self.getTypedRuleContext(supercritParser.If_blockContext,i)


        def while_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(supercritParser.While_blockContext)
            else:
                return self.getTypedRuleContext(supercritParser.While_blockContext,i)


        def for_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(supercritParser.For_blockContext)
            else:
                return self.getTypedRuleContext(supercritParser.For_blockContext,i)


        def getRuleIndex(self):
            return supercritParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = supercritParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.state = 51
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 30
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==supercritParser.VAR:
                    self.state = 27
                    self.line()
                    self.state = 32
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 36
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==supercritParser.IF:
                    self.state = 33
                    self.if_block()
                    self.state = 38
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 42
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==supercritParser.WHILE:
                    self.state = 39
                    self.while_block()
                    self.state = 44
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 48
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==supercritParser.FOR:
                    self.state = 45
                    self.for_block()
                    self.state = 50
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(supercritParser.AssignmentContext,0)


        def NEWLINE(self):
            return self.getToken(supercritParser.NEWLINE, 0)

        def getRuleIndex(self):
            return supercritParser.RULE_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLine" ):
                listener.enterLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLine" ):
                listener.exitLine(self)




    def line(self):

        localctx = supercritParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_line)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.assignment()
            self.state = 54
            self.match(supercritParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Tab_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TAB(self, i:int=None):
            if i is None:
                return self.getTokens(supercritParser.TAB)
            else:
                return self.getToken(supercritParser.TAB, i)

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(supercritParser.LineContext)
            else:
                return self.getTypedRuleContext(supercritParser.LineContext,i)


        def getRuleIndex(self):
            return supercritParser.RULE_tab_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTab_block" ):
                listener.enterTab_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTab_block" ):
                listener.exitTab_block(self)




    def tab_block(self):

        localctx = supercritParser.Tab_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_tab_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==supercritParser.TAB:
                self.state = 56
                self.match(supercritParser.TAB)
                self.state = 57
                self.line()
                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(supercritParser.IF, 0)

        def conditional(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(supercritParser.ConditionalContext)
            else:
                return self.getTypedRuleContext(supercritParser.ConditionalContext,i)


        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(supercritParser.COLON)
            else:
                return self.getToken(supercritParser.COLON, i)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(supercritParser.NEWLINE)
            else:
                return self.getToken(supercritParser.NEWLINE, i)

        def tab_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(supercritParser.Tab_blockContext)
            else:
                return self.getTypedRuleContext(supercritParser.Tab_blockContext,i)


        def OPEN_PAR(self, i:int=None):
            if i is None:
                return self.getTokens(supercritParser.OPEN_PAR)
            else:
                return self.getToken(supercritParser.OPEN_PAR, i)

        def CLOSE_PAR(self, i:int=None):
            if i is None:
                return self.getTokens(supercritParser.CLOSE_PAR)
            else:
                return self.getToken(supercritParser.CLOSE_PAR, i)

        def ELIF(self, i:int=None):
            if i is None:
                return self.getTokens(supercritParser.ELIF)
            else:
                return self.getToken(supercritParser.ELIF, i)

        def ELSE(self):
            return self.getToken(supercritParser.ELSE, 0)

        def getRuleIndex(self):
            return supercritParser.RULE_if_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_block" ):
                listener.enterIf_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_block" ):
                listener.exitIf_block(self)




    def if_block(self):

        localctx = supercritParser.If_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_if_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(supercritParser.IF)
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==supercritParser.OPEN_PAR:
                self.state = 64
                self.match(supercritParser.OPEN_PAR)


            self.state = 67
            self.conditional()
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==supercritParser.CLOSE_PAR:
                self.state = 68
                self.match(supercritParser.CLOSE_PAR)


            self.state = 71
            self.match(supercritParser.COLON)
            self.state = 72
            self.match(supercritParser.NEWLINE)
            self.state = 73
            self.tab_block()
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==supercritParser.ELIF:
                self.state = 74
                self.match(supercritParser.ELIF)
                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==supercritParser.OPEN_PAR:
                    self.state = 75
                    self.match(supercritParser.OPEN_PAR)


                self.state = 78
                self.conditional()
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==supercritParser.CLOSE_PAR:
                    self.state = 79
                    self.match(supercritParser.CLOSE_PAR)


                self.state = 82
                self.match(supercritParser.COLON)
                self.state = 83
                self.match(supercritParser.NEWLINE)
                self.state = 84
                self.tab_block()
                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==supercritParser.ELSE:
                self.state = 91
                self.match(supercritParser.ELSE)
                self.state = 92
                self.match(supercritParser.COLON)
                self.state = 93
                self.match(supercritParser.NEWLINE)
                self.state = 94
                self.tab_block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(supercritParser.WHILE, 0)

        def conditional(self):
            return self.getTypedRuleContext(supercritParser.ConditionalContext,0)


        def COLON(self):
            return self.getToken(supercritParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(supercritParser.NEWLINE, 0)

        def tab_block(self):
            return self.getTypedRuleContext(supercritParser.Tab_blockContext,0)


        def OPEN_PAR(self):
            return self.getToken(supercritParser.OPEN_PAR, 0)

        def CLOSE_PAR(self):
            return self.getToken(supercritParser.CLOSE_PAR, 0)

        def getRuleIndex(self):
            return supercritParser.RULE_while_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_block" ):
                listener.enterWhile_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_block" ):
                listener.exitWhile_block(self)




    def while_block(self):

        localctx = supercritParser.While_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_while_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(supercritParser.WHILE)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==supercritParser.OPEN_PAR:
                self.state = 98
                self.match(supercritParser.OPEN_PAR)


            self.state = 101
            self.conditional()
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==supercritParser.CLOSE_PAR:
                self.state = 102
                self.match(supercritParser.CLOSE_PAR)


            self.state = 105
            self.match(supercritParser.COLON)
            self.state = 106
            self.match(supercritParser.NEWLINE)
            self.state = 107
            self.tab_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(supercritParser.FOR, 0)

        def conditional(self):
            return self.getTypedRuleContext(supercritParser.ConditionalContext,0)


        def COLON(self):
            return self.getToken(supercritParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(supercritParser.NEWLINE, 0)

        def tab_block(self):
            return self.getTypedRuleContext(supercritParser.Tab_blockContext,0)


        def OPEN_PAR(self):
            return self.getToken(supercritParser.OPEN_PAR, 0)

        def CLOSE_PAR(self):
            return self.getToken(supercritParser.CLOSE_PAR, 0)

        def getRuleIndex(self):
            return supercritParser.RULE_for_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor_block" ):
                listener.enterFor_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor_block" ):
                listener.exitFor_block(self)




    def for_block(self):

        localctx = supercritParser.For_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_for_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(supercritParser.FOR)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==supercritParser.OPEN_PAR:
                self.state = 110
                self.match(supercritParser.OPEN_PAR)


            self.state = 113
            self.conditional()
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==supercritParser.CLOSE_PAR:
                self.state = 114
                self.match(supercritParser.CLOSE_PAR)


            self.state = 117
            self.match(supercritParser.COLON)
            self.state = 118
            self.match(supercritParser.NEWLINE)
            self.state = 119
            self.tab_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN_PAR(self):
            return self.getToken(supercritParser.OPEN_PAR, 0)

        def expr(self):
            return self.getTypedRuleContext(supercritParser.ExprContext,0)


        def CLOSE_PAR(self):
            return self.getToken(supercritParser.CLOSE_PAR, 0)

        def getRuleIndex(self):
            return supercritParser.RULE_print

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint" ):
                listener.enterPrint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint" ):
                listener.exitPrint(self)




    def print(self):

        localctx = supercritParser.PrintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_print)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(supercritParser.T__0)
            self.state = 122
            self.match(supercritParser.OPEN_PAR)
            self.state = 123
            self.expr(0)
            self.state = 124
            self.match(supercritParser.CLOSE_PAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(supercritParser.ExprContext,0)


        def conditional(self):
            return self.getTypedRuleContext(supercritParser.ConditionalContext,0)


        def assignment(self):
            return self.getTypedRuleContext(supercritParser.AssignmentContext,0)


        def getRuleIndex(self):
            return supercritParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = supercritParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_statement)
        try:
            self.state = 129
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.expr(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.conditional()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 128
                self.assignment()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MINUS(self):
            return self.getToken(supercritParser.MINUS, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(supercritParser.ExprContext)
            else:
                return self.getTypedRuleContext(supercritParser.ExprContext,i)


        def POW(self):
            return self.getToken(supercritParser.POW, 0)

        def TIMES(self):
            return self.getToken(supercritParser.TIMES, 0)

        def DIV(self):
            return self.getToken(supercritParser.DIV, 0)

        def PLUS(self):
            return self.getToken(supercritParser.PLUS, 0)

        def MOD(self):
            return self.getToken(supercritParser.MOD, 0)

        def EQUAL(self):
            return self.getToken(supercritParser.EQUAL, 0)

        def NOT_EQUAL(self):
            return self.getToken(supercritParser.NOT_EQUAL, 0)

        def AND(self):
            return self.getToken(supercritParser.AND, 0)

        def OR(self):
            return self.getToken(supercritParser.OR, 0)

        def NOT(self):
            return self.getToken(supercritParser.NOT, 0)

        def getRuleIndex(self):
            return supercritParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = supercritParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(supercritParser.MINUS)
            self.state = 133
            self.expr(9)
            self._ctx.stop = self._input.LT(-1)
            self.state = 161
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,18,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 159
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
                    if la_ == 1:
                        localctx = supercritParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 135
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 136
                        self.match(supercritParser.POW)
                        self.state = 137
                        self.expr(9)
                        pass

                    elif la_ == 2:
                        localctx = supercritParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 138
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 139
                        _la = self._input.LA(1)
                        if not(_la==supercritParser.TIMES or _la==supercritParser.DIV):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 140
                        self.expr(8)
                        pass

                    elif la_ == 3:
                        localctx = supercritParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 141
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 142
                        _la = self._input.LA(1)
                        if not(_la==supercritParser.PLUS or _la==supercritParser.MINUS):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 143
                        self.expr(7)
                        pass

                    elif la_ == 4:
                        localctx = supercritParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 144
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 145
                        self.match(supercritParser.MOD)
                        self.state = 146
                        self.expr(6)
                        pass

                    elif la_ == 5:
                        localctx = supercritParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 147
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 148
                        _la = self._input.LA(1)
                        if not(_la==supercritParser.EQUAL or _la==supercritParser.NOT_EQUAL):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 149
                        self.expr(5)
                        pass

                    elif la_ == 6:
                        localctx = supercritParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 150
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 151
                        self.match(supercritParser.AND)
                        self.state = 152
                        self.expr(4)
                        pass
